@@ -40,6 +40,7 @@ Collate:
     'custom-dims.R'
     'custom-mets.R'
     'custom-sources.R'
+    'daywise.R'
     'experiments.R'
     'filters.R'
     'query.R'
